5/4/11 #2843, change request: set default max of Capacitance meter to 10^-12
5/4/11 add interviews to credits.txt
5/4/11 enable Multiple Capacitors tab
# 1.00.02 (51504) May 3, 2011
5/3/11 demonstrate new zoom buttons for bar meters
5/3/11 temporarily hide Multiple Capacitors tab
5/3/11 #2843, change to 2 zoom buttons (in and out) on bar meter
5/2/11 #2843, make zoom button on bar meter look like a button
4/27/11 add ICircuit.reset, reset all circuits in model.reset
4/27/11 move convenience classes to inner classes
4/27/11 give better names to combination circuits, at least for development
4/27/11 change World to "WorldBounds extends Property"
4/27/11 convert to using global properties for things controlled from the menu bar
4/27/11 big simplification of VoltmeterProbeNode hierarchy
4/27/11 simplify WorldLocationDragHandler by operating directly on a WorldLocationProperty
4/27/11 change visibility of some view object subcomponents to "package private"
4/27/11 cleanup BarMeterNode class hierarchy
4/18/11 Wire: make some properties final public to simplify
4/18/11 World: make some properties final public to simplify
4/18/11 fixed problem with voltmeter reading stale wire voltages (this is a bug in 1.00 and earlier)
4/18/11 voltmeter: make some properties final public, add setCircuit so that meter can be connected to different circuits
4/18/11 EField detector: make some properties final public, add setCircuit so that meter can be connected to different circuits, use PropertyCheckBox in control panel
4/18/11 replace circuit choice enum with a list of circuit instances and currentCircuit property
4/18/11 add displayName field to circuit
4/18/11 BarMeter: make some properties final public, add setCircuit so that meters can be connected to different circuits
4/18/11 replace abstract method with function parameter in BarMeter base class
4/11/11 add meters to Multi-Cap canvas
4/11/11 added circuit choice property to model and control panel