@@ -38,7 +38,7 @@ separation=Separation
 showAllCharges=Show all charges
 showExcessCharges=Show excess charges
 showValues=Show Values
-showVectors=Show Vectors
+showVectors=Show Vectors:
 storedEnergy=Stored Energy
 sum=Sum
 teflon=teflon
@@ -47,7 +47,7 @@ voltmeter=Voltmeter
 volts=V
 voltsPerMeter=V/m
 voltsUnknown=?
-zoom=Zoom
+zoom=Zoom:
 
 pattern.0label={0}:
 pattern.0value.1units={0} {1}
