@@ -1,3 +1,4 @@
+5/4/11 #2843, change request: put zoom in button above zoom out button in bar meters and E-field detector
 5/4/11 #2843, change request: set default max of Capacitance meter to 10^-12
 5/4/11 add interviews to credits.txt
 5/4/11 enable Multiple Capacitors tab
